[gd_scene load_steps=8 format=3 uid="uid://cc8d66a5xvi80"]

[ext_resource type="Script" uid="uid://0e2ilr3bluh4" path="res://ass/demo.gd" id="1_keti0"]
[ext_resource type="PackedScene" uid="uid://dik2g1ubnidkw" path="res://ass/Walking.tscn" id="1_m6tcs"]
[ext_resource type="PackedScene" uid="uid://dm4omb54etaqc" path="res://ass/blue_eye.tscn" id="3_itjsu"]
[ext_resource type="PackedScene" uid="uid://dkxl6pl0s0yly" path="res://ass/Tree.glb" id="3_ks0t1"]
[ext_resource type="Texture2D" uid="uid://3ntn4dt6107t" path="res://ass/Lamborginhi Aventador_diffuse.jpeg" id="4_itjsu"]
[ext_resource type="ArrayMesh" uid="uid://bqmbx47e75rvx" path="res://ass/Lamborghini_Aventador.obj" id="5_yi2iu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_omcyq"]
albedo_texture = ExtResource("4_itjsu")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_keti0")

[node name="Walking" parent="." instance=ExtResource("1_m6tcs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8401, 0, 0.691183)

[node name="Walking2" parent="." instance=ExtResource("1_m6tcs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.95221, 0, 0.691183)

[node name="Walking3" parent="." instance=ExtResource("1_m6tcs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.68513, 0, 0.691183)

[node name="Walking4" parent="." instance=ExtResource("1_m6tcs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.4817, 0, 0.691183)

[node name="Praying" parent="." instance=ExtResource("3_itjsu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.6312, -0.822978, -2.98925)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.05869, 14.8216)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.620108, 0.784517, 0, -0.784517, -0.620108, 0, 36.222, 20.0949)

[node name="Tree" parent="." instance=ExtResource("3_ks0t1")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 22.164, 18.8439, -8.23383)

[node name="Tree2" parent="." instance=ExtResource("3_ks0t1")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, -6.93504, 18.8439, -40.0218)

[node name="LamborghiniAventador" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0349471, 0, -0.0606523, 0, 0.07, 0, 0.0606523, 0, 0.0349471, -11.795, -0.640953, -20.7647)
material_override = SubResource("StandardMaterial3D_omcyq")
mesh = ExtResource("5_yi2iu")
